--- a/styles/Article.module.css
+++ b/styles/Article.module.css
@@ -2,10 +2,9 @@
 .grid {
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: wrap;
     max-width: 800px;
-    margin-top: 3rem;
   }
   
   .card {
